# recurrentgemma-xai

./: .gitignore  pyproject.toml
notebooks/: analysis.ipynb  sampling.ipynb
recurrentgemma/: __init__.py  array_typing.py  common.py  griffin.py  layers.py  modules.py
recurrentgemma/torch/: griffin.py  layers.py  modules.py  sampler.py
